# adventofcode

2017/: advent10_a.hs  advent10_b.hs  advent11_a.hs  advent12_a.hs  advent13_a.hs  advent13_b.hs  advent14_a.hs  advent14_b.hs  advent15_a.hs  advent16_a.hs  advent17_a.hs  advent17_b.hs  advent18_a.hs  advent1_a.hs  advent1_a.rs  advent1_b.hs  advent1_b.rs  advent2_a.rs  advent2_b.rs  advent3_a.hs  advent3_b.hs  advent4_a.hs  advent4_b.hs  advent5_a.rs  advent5_b.hs  advent5_b.rs  advent6.rs  advent7.input  advent7_a.hs  advent7_b.hs  advent8_a.hs  advent9_a.hs
2019/advent/: Cargo.toml  README.md
2019/advent/input/: 1b.input  2b.input  3b.input  4b.input  5b.input
2019/advent/src/: main.rs
2019/advent/src/advent/: advent1.rs  advent2.rs  advent3.rs  advent4.rs  advent5.rs  mod.rs
2020/day1/: Cargo.toml
2020/day1/src/: main.rs
