[package]
name = "advent"
version = "2019.0.1"
authors = ["Andy Georges <itkovian@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/itkovian/adventofcode"
keywords = ["code", "contest"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33"