[package]
name = "advent"
version = "2019.0.1"
authors = ["Andy Georges <itkovian@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/itkovian/adventofcode"
keywords = ["code", "contest"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
clap = "2.33"
itertools = "0.8.1"
fern = { version = "0.5.9" }
log  = "^0.4"